--- a/coinbase-client/src/main/resources/templates/index.html
+++ b/coinbase-client/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <script src="/main.js"></script>
 </head>
 
